GNOME Bugzilla – Bug 683200
libsoup win32 build fails with implicit getpid() declaration
Last modified: 2012-09-03 12:32:42 UTC
libsoup/soup-auth-digest.c: In function 'soup_auth_digest_authenticate': libsoup/soup-auth-digest.c:287:5: error: implicit declaration of function 'getpid' [-Werror=implicit-function-declaration] cc1: some warnings being treated as errors
Created attachment 223194 [details] [review] Fix the win32 build Make sure glib.h is included before using G_OS_WIN32 ifdef.
committed with a slight tweak. thanks