Fix the win32 build

Make sure glib.h is included before using G_OS_WIN32 ifdef.

https://bugzilla.gnome.org/show_bug.cgi?id=683200